syntax = "proto3";

package fs_pb;
option go_package = "github.com/parasource/rhosus/rhosus/pb/fs_pb";

////////////////////
// FS base messages

message File {
  string id = 1;
  string name = 2;
  string dirID = 3;
  string fullPath = 4;
  int64 timestamp = 5;
  uint64 size = 6;
  int32 blocks = 7;
}

message Block {
  string id = 1;
  uint64 index = 2;
  string file_id = 3;
  uint64 offset = 4;
  uint64 size = 5;
  bytes data = 6;
  bytes checksum = 7;
}

